ipc/ipdl/test/ipdl/ok/PNullable.ipdl
union Union {
    nullable PNullable;
    nullable PNullable[];
    nullable PNullable?;
};

protocol PNullable {
child:
    async Msg(nullable PNullable n);
    async Msg2(nullable PNullable[] N);
    async Msg3(nullable PNullable? n);
    async Msg4(Union u);
};
