ipc/ipdl/test/ipdl/error/Nullable2.ipdl
//error: `nullable' qualifier for type `int' makes no sense

union Union {
    nullable int;
};

protocol Nullable2 {
child:
    async Msg(Union i);
};
